--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -23,7 +23,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
-          pytest test_json_place_holder.py
-          pytest test_json_place_holder_Q2.py
+          #pytest test_json_place_holder.py
+          #pytest test_json_place_holder_Q2.py
           pytest test_StarWarsAPITestCase.py
           
