--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-pip-
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+          pytest python -m pip install --upgrade pip
         pip install -r requirements.txt 
     
     - name: Run pytest 
