--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Python test
 
 on: [push]
 
@@ -19,11 +19,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest requests
+          pip install requests pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest
+      - name: Run python tests
         run: |
-          pytest test_json_place_holder.py
-          #pytest test_json_place_holder_Q2.py
-          pytest test_StarWarsAPITestCase.py
-          
+          pytest -rA
